Closed Bug 763899 Opened 12 years ago Closed 12 years ago

mouseenter events should fire top-down

Categories

(Core :: DOM: Events, defect)

10 Branch
x86_64
Windows 7
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: wizard04, Assigned: smaug)

Details

Attachments

(2 files)

Attached file mouseenter event test
User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:10.0.2) Gecko/20100101 Firefox/10.0.2
Build ID: 20120215223356

Steps to reproduce:

In the attached test page, moved the mouse from the white area directly into the red <div>, which is nested inside a green <div> inside a blue <div>.


Actual results:

The mouseenter events were fired on the <div>s in this order: red, green, blue.


Expected results:

The mouseenter events should be fired on the <div>s in this order: blue, green, red.

This is not specified in the spec (http://www.w3.org/TR/DOM-Level-3-Events/#event-type-mouseenter), but this is how Internet Explorer behaves and it makes much more sense.
Attachment #632228 - Attachment mime type: text/plain → text/html
Component: Untriaged → DOM: Events
Product: Firefox → Core
QA Contact: untriaged → events
Assignee: nobody → bugs
Attached patch patchSplinter Review
Attachment #635498 - Flags: review?(masayuki)
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Comment on attachment 635498 [details] [diff] [review]
patch

I think D3E should define the order.
Attachment #635498 - Flags: review?(masayuki) → review+
I'll file a spec bug.
https://hg.mozilla.org/mozilla-central/rev/51541bc07f52
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Andy, can you confirm this is fixed for you now with tomorrow's Nightly (2012-06-24)?
Where do I go to download the nighly?
Found it. Confirmed fixed. Thanks!
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.