Bug 763899 - mouseenter events should fire the opposite order of mouseleave, r=masayuki