content/events/src/nsEventStateManager.cpp
@@ -3872,8 +3872,14 @@ public:
 
   ~MouseEnterLeaveDispatcher()
   {
-    for (PRInt32 i = 0; i < mTargets.Count(); ++i) {
-      mESM->DispatchMouseEvent(mEvent, mType, mTargets[i], mRelatedTarget);
+    if (mType == NS_MOUSEENTER) {
+      for (PRInt32 i = mTargets.Count() - 1; i >= 0; --i) {
+        mESM->DispatchMouseEvent(mEvent, mType, mTargets[i], mRelatedTarget);
+      }
+    } else {
+      for (PRInt32 i = 0; i < mTargets.Count(); ++i) {
+        mESM->DispatchMouseEvent(mEvent, mType, mTargets[i], mRelatedTarget);
+      }
     }
   }
 
